# clifford

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  deny.toml  review.md
.cargo/: audit.toml
.claude/: settings.json
.claude/agents/: design.md  devops.md  document.md  explain.md  implement.md  optimize.md  release.md  review.md  test.md
.config/: nextest.toml
.github/workflows/: ci.yml  deploy-demos.yml  publish.yml  release-tag.yml  visual-tests.yml
algebras/: complex.toml  conformal2.toml  conformal3.toml  dual.toml  dualquat.toml  elliptic2.toml  euclidean2.toml  euclidean3.toml  hyperbolic.toml  hyperbolic2.toml  minkowski2.toml  minkowski3.toml  projective2.toml  projective3.toml  quaternion.toml
benches/: README.md  generic.rs  multivector.rs  nalgebra_comparison.rs  pga_nalgebra_comparison.rs  projective.rs  specialized.rs
crates/clifford/: Cargo.toml  README.md  build.rs
crates/clifford-codegen/: Cargo.toml  README.md
crates/clifford-codegen/algebras/: complex.toml  conformal2.toml  dual.toml  euclidean2.toml  euclidean3.toml  hyperbolic2.toml  projective2.toml  projective3.toml
crates/clifford-codegen/src/: lib.rs  main.rs
crates/clifford-codegen/src/algebra/: blade.rs  constraints.rs  grade.rs  mod.rs  proptest.rs  sign.rs  signature.rs  table.rs  verification.rs  versor.rs
crates/clifford-codegen/src/codegen/: constraints.rs  conversions.rs  format.rs  mod.rs  products.rs  projections.rs  traits.rs  types.rs  unary.rs
crates/clifford-codegen/src/discovery/: constraints.rs  entity.rs  mod.rs  naming.rs  products.rs  template.rs
crates/clifford-codegen/src/spec/: bundled.rs  error.rs  ir.rs  mod.rs  parser.rs  raw.rs
crates/clifford-codegen/src/symbolic/: constraint_derive.rs  constraint_simplify.rs  groebner.rs  mod.rs  parser.rs  product.rs  simplify.rs  solver.rs  to_rust.rs  verify.rs
crates/clifford-viz/: Cargo.toml  Trunk.toml  index.html  style.css
crates/clifford-viz/examples/: complex_domain.rs  complex_fractal.rs  conformal2_circles.rs  conformal2_intersection.rs  conformal2_inversion.rs  conformal2_mobius.rs  dual_autodiff.rs  euclidean2.rs  euclidean3.rs  euclidean3_three_d.rs  minkowski2_diagram.rs  minkowski2_dilation.rs  projective2.rs  projective2_robot.rs  projective3_geometry.rs  projective3_lines.rs  projective3_motor.rs  projective3_robot.rs  test_3d.rs  three_d_test.rs  visualization_test.rs
crates/clifford-viz/src/: lib.rs
crates/clifford-viz/src/common/: animation.rs  app.rs  app_three_d.rs  camera3d.rs  colors.rs  grid.rs  mod.rs  shapes.rs  shapes3d.rs  widgets.rs
crates/clifford-viz/src/demos/: complex_domain.rs  complex_fractal.rs  conformal2_circles.rs  conformal2_intersection.rs  conformal2_inversion.rs  conformal2_mobius.rs  conformal3_circles.rs  conformal3_inversion.rs  dual_autodiff.rs  euclidean2.rs  euclidean3.rs  menu.rs  minkowski2_diagram.rs  minkowski2_dilation.rs  mod.rs  projective2.rs  projective2_robot.rs  projective3_geometry.rs  projective3_lines.rs  projective3_motor.rs  projective3_robot.rs  test_3d.rs
crates/clifford-viz/src/testing/: inspector.rs  invariants.rs  mod.rs  scene.rs
crates/clifford-viz/tests/: euclidean2_invariants.proptest-regressions  euclidean2_invariants.rs  projective2_invariants.rs
crates/clifford/benches/: generic.rs  pga_nalgebra_comparison.rs  projective.rs  specialized.rs
crates/clifford/examples/: rerun_animation.rs  rerun_visualization.rs
crates/clifford/proptest-regressions/specialized/projective/dim3/: nalgebra.txt
crates/clifford/src/: lib.rs  norm.rs  ops.rs
crates/clifford/src/algebra/: arbitrary.rs  mod.rs  multivector.rs
crates/clifford/src/basis/: blade.rs
crates/clifford/src/scalar/: mod.rs
crates/clifford/src/signature/: conformal.rs  euclidean.rs  mod.rs  projective.rs
crates/clifford/src/specialized/: mod.rs
crates/clifford/src/specialized/complex/: extensions.rs  mod.rs
crates/clifford/src/specialized/conformal/: mod.rs
crates/clifford/src/specialized/conformal/dim2/: extensions.rs  mod.rs
crates/clifford/src/specialized/conformal/dim3/: extensions.rs  mod.rs
crates/clifford/src/specialized/dual/: extensions.rs  mod.rs
crates/clifford/src/specialized/dualquat/: mod.rs
crates/clifford/src/specialized/euclidean/: mod.rs
crates/clifford/src/specialized/euclidean/dim2/: extensions.rs
crates/clifford/src/specialized/euclidean/dim3/: extensions.rs
crates/clifford/src/specialized/hyperbolic/: mod.rs
crates/clifford/src/specialized/minkowski/: mod.rs
crates/clifford/src/specialized/minkowski/dim3/: mod.rs
crates/clifford/src/specialized/projective/: mod.rs
crates/clifford/src/specialized/projective/dim2/: extensions.rs  mod.rs
crates/clifford/src/specialized/projective/dim3/: extensions.rs  mod.rs  nalgebra.rs  rerun.rs
crates/clifford/tests/: nalgebra_interop.proptest-regressions  normed_wrappers.rs  proptest_arbitrary.rs
derivations/: README.md  pyproject.toml
derivations/src/clifford_derivations/: __init__.py  cga.py  motor.py  transform.py
docs/: toml-schema.md
docs/prd/: README.md  cga2d-basis-conventions.md  prd-0-architecture.md  prd-1-foundation.md  prd-10-nalgebra-benchmarks.md  prd-11-autodiff.md  prd-12-rerun.md  prd-13-release.md  prd-14-codegen.md  prd-14.1-blade-algebra.md  prd-14.10-product-inference.md  prd-14.11-constraint-simplification.md  prd-14.12-symbolica-verification.md  prd-14.13-constraint-constructors.md  prd-14.14-flexible-constraints.md  prd-14.2-specification.md  prd-14.3-type-generation.md  prd-14.4-product-generation.md  prd-14.5-constrained-types.md  prd-14.6-traits-tests.md  prd-14.7-cli-integration.md  prd-14.8-constraint-engine.md  prd-14.9-entity-discovery.md  prd-15-codegen-migration.md  prd-15.1-euclidean3-migration.md  prd-15.2-euclidean2-migration.md  prd-15.3-projective3-migration.md  prd-15.4-projective2-migration.md  (+89 more)
examples/: rerun_animation.rs  rerun_bivector.rs  rerun_visualization.rs
src/: lib.rs  norm.rs  ops.rs  prelude.rs  wrappers.rs
tests/: nalgebra_interop.rs  normed_wrappers.rs  proptest_arbitrary.rs
(+75 files in other folders)
