[package]
name = "clifford"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A Rust library for Geometric Algebra (Clifford Algebra)"
keywords = ["geometric-algebra", "clifford-algebra", "mathematics", "simd", "linear-algebra"]
categories = ["mathematics", "science"]
repository = "https://github.com/DevonMorris/clifford"
readme = "README.md"

[lints.rust]
warnings = "deny"
missing_docs = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
missing_docs_in_private_items = "deny"
uninlined_format_args = "allow"

[features]
default = []
serde = ["dep:serde", "generic-array/serde"]
proptest-support = ["dep:proptest"]

[dependencies]
approx = "0.5"
generic-array = "1"
typenum = "1"
serde = { version = "1", features = ["derive"], optional = true }
proptest = { version = "1", optional = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
proptest = "1"
serde_json = "1"

[[bench]]
name = "generic"
harness = false

[[bench]]
name = "specialized"
harness = false
