[workspace]
members = ["crates/clifford", "crates/clifford-codegen", "crates/clifford-viz"]
resolver = "3"

[workspace.lints.rust]
warnings = "deny"
missing_docs = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
missing_docs_in_private_items = "deny"
uninlined_format_args = "allow"

# Optimize codegen tool and its heavy dependencies even in dev mode
# (symbolic computation is slow unoptimized)
[profile.dev.package.clifford-codegen]
opt-level = 3

[profile.dev.package.symbolica]
opt-level = 0

[profile.dev.package.rug]
opt-level = 2
