[project]
name = "clifford-derivations"
version = "0.1.0"
description = "Symbolic derivations for Clifford geometric algebra library"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sympy>=1.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clifford_derivations"]
