[package]
name = "clifford-viz"
version = "0.1.0"
edition = "2024"
rust-version = "1.87.0"
license = "MIT"
description = "Interactive visualizations for clifford geometric algebra"
keywords = ["geometric-algebra", "visualization", "egui"]
categories = ["visualization", "mathematics"]
repository = "https://github.com/DevonMorris/clifford"

[lints]
workspace = true

[features]
default = []
testing = ["dep:proptest"]

[dependencies]
clifford = { path = "../clifford", default-features = false }
eframe = "0.30"
egui = "0.30"
egui_plot = "0.30"
proptest = { version = "1", optional = true }

[dev-dependencies]
image = "0.25"
proptest = "1"
approx = "0.5"
clifford-viz = { path = ".", features = ["testing"] }
