[package]
name = "clifford-viz"
version = "0.1.0"
edition = "2024"
rust-version = "1.87.0"
license = "MIT"
description = "Interactive visualizations for clifford geometric algebra"
keywords = ["geometric-algebra", "visualization", "egui"]
categories = ["visualization", "mathematics"]
repository = "https://github.com/DevonMorris/clifford"

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[features]
default = []
native = ["dep:eframe", "eframe?/default"]
testing = ["dep:proptest"]

[dependencies]
clifford = { path = "../clifford", default-features = false }
eframe = { version = "0.30", optional = true, default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
egui = "0.30"
egui_extras = { version = "0.30", features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png"] }
egui_plot = "0.30"
log = "0.4"
proptest = { version = "1", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
eframe = { version = "0.30", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Location", "Document", "Element", "HtmlCanvasElement"] }

[dev-dependencies]
image = "0.25"
proptest = "1"
approx = "0.5"
clifford-viz = { path = ".", features = ["testing"] }

# Examples require the native feature (windowing support)
[[example]]
name = "euclidean2"
required-features = ["native"]

[[example]]
name = "projective2"
required-features = ["native"]

[[example]]
name = "projective2_robot"
required-features = ["native"]

[[example]]
name = "conformal2_circles"
required-features = ["native"]

[[example]]
name = "conformal2_inversion"
required-features = ["native"]

[[example]]
name = "complex_domain"
required-features = ["native"]

[[example]]
name = "complex_fractal"
required-features = ["native"]

[[example]]
name = "dual_autodiff"
required-features = ["native"]

[[example]]
name = "visualization_test"
required-features = ["native"]

[[example]]
name = "minkowski2_diagram"
required-features = ["native"]

[[example]]
name = "minkowski2_dilation"
required-features = ["native"]

[[example]]
name = "conformal2_mobius"
required-features = ["native"]

[[example]]
name = "conformal2_intersection"
required-features = ["native"]

# Binary works on both native (with native feature) and WASM (via target-specific deps)
[[bin]]
name = "demo_launcher"
