[package]
name = "clifford-viz"
version = "0.1.0"
edition = "2024"
rust-version = "1.87.0"
license = "MIT"
description = "Interactive visualizations for clifford geometric algebra"
keywords = ["geometric-algebra", "visualization", "egui"]
categories = ["visualization", "mathematics"]
repository = "https://github.com/DevonMorris/clifford"

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[features]
default = []
testing = ["dep:proptest"]
three-d = ["dep:three-d", "three-d?/egui-gui"]

[dependencies]
clifford = { path = "../clifford", default-features = false }
egui = "0.29"
egui_extras = { version = "0.29", features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png"] }
egui_plot = "0.29"
log = "0.4"
proptest = { version = "1", optional = true }
three-d = { version = "0.18", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Location"] }
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
image = "0.25"
proptest = "1"
approx = "0.5"
clifford-viz = { path = ".", features = ["testing"] }

# Examples use three-d for rendering
[[example]]
name = "euclidean2"
required-features = ["three-d"]

[[example]]
name = "euclidean3"
required-features = ["three-d"]

[[example]]
name = "projective2"
required-features = ["three-d"]

[[example]]
name = "projective2_robot"
required-features = ["three-d"]

[[example]]
name = "conformal2_circles"
required-features = ["three-d"]

[[example]]
name = "conformal2_inversion"
required-features = ["three-d"]

[[example]]
name = "complex_domain"
required-features = ["three-d"]

[[example]]
name = "complex_fractal"
required-features = ["three-d"]

[[example]]
name = "dual_autodiff"
required-features = ["three-d"]

[[example]]
name = "minkowski2_diagram"
required-features = ["three-d"]

[[example]]
name = "minkowski2_dilation"
required-features = ["three-d"]

[[example]]
name = "conformal2_mobius"
required-features = ["three-d"]

[[example]]
name = "conformal2_intersection"
required-features = ["three-d"]

[[example]]
name = "projective3_motor"
required-features = ["three-d"]

[[example]]
name = "projective3_lines"
required-features = ["three-d"]

[[example]]
name = "projective3_robot"
required-features = ["three-d"]

# Demo launcher using three-d (works native and WASM)
[[bin]]
name = "demo_launcher"
required-features = ["three-d"]
